# Document-Analyzer

./: .gitignore  README.md  documents.json  main.py  my_client.py  pyproject.toml  tasks.md
