[project]
name = "document-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.1",
    "textblob>=0.18.0",
    "textstat>=0.7.0",
    "scikit-learn>=1.3.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.1",
]
